 20100118 (T.S.)
 - src/padStream.c, src/padStream.h:
    o changed semantics of 'start' argument to start_stop_cb(); this
      is now a pointer to the STRM command (start) or NULL (stop).
    o added support for 32-bit stream data.
    o added 'd32' argument to stream 'getdata' callback.
    o let padStreamSim() succeed even if stream is not connected
      provided that 'nosend' option is set.
 20100118 (T.S.)
 - src/padProtoHost.c:
    o updated usage info (-d flag).
    o added 32-bit stream data support.
    o added option to set stream timeout.
 20100118 (T.S.)
 - src/padProto.c:
    o ignore return value of padStreamPet() (PADCMD_SIM command).
 20100118 (T.S.)
 - src/padProto.h: added PADCMD_STRM_FLAG_32 (32-bit stream data).
 20100118 (T.S.)
 - src/hostStream.c:
    o added timeout functionality (stream times out and stops if no
      PET or STRM command is received withing timeout).
    o added support for 32-bit stream data.
    o added padStreamPet().
    o include <padStream.h> to ensure API compatibility.
    o let padStreamSim() succeed even if stream is not connected
      provided that 'nosend' option is set.
 - src/hostStream.h: export/declare padStreamTimeoutSecs;
 20100113 (T.S.)
 - src/padProto.c, src/padStream.c, src/padStream.h:
   moved stream connection state handling into the padStream module and
   added a 'timeout' feature so that a stream that is not 'petted' or
   re-'started' within padStreamTimeoutSecs seconds it is forcefully stopped.
 - src/padStream.c: BUGFIX: ensure proper alignment of 'replyPacket'.
 - src/padStream.c: padStreamStart() resets connection state to 'unconnected'
   if start_stop_callback() returns nonzero and passes this return code
   to caller.
 - src/padStream.c: padStreamStart(), padStreamStop() - moved execution
   of start_stop_callback() into mutex-protected section.
 - src/padStream.c: padStreamStop() - reset/clear connection regardless
   of result returned by start_stop_callback().
 20100112 (T.S.)